--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,19 @@
+body{
+    text-align: center;
+    font-size: 40px;
 
+}
 
 .boxed{
     background-color: azure;
     position: absolute;
+    font-size: 30px;
     margin: 2rem;
-    padding: 2rem;
+    padding: 3rem;
     top: 20%;
-    left: 40%;
+    left: 30%;
+    width: 400px;
+    height: 350px
 }
 
 
