--- a/css/login2.css
+++ b/css/login2.css
@@ -1,8 +1,20 @@
+
+body{
+    font-size: 40px;
+    text-align: center;
+}
+
+
+
+
+
 .boxed{
     background-color: azure;
     position: absolute;
     margin: 2rem;
-    padding: 2rem;
+    padding: 3rem;
+    width: 400px;
+    height:350px;
     top: 20%;
-    left: 40%;
+    left: 30%;
 }
