--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,30 @@
+.button{
+    float: right;
+    width: 90px;
+    height: 200px;
+    border: 2px solid #bbbbbb;
+    font-size: 24px;
+}
+
+
 body{
     padding: 2rem;
+    text-align: left;
+    font-size: 30px;
+    
 }
 
-.topnav{
-position: relative;
-margin: 2rem;
-background-color: azure;
-overflow: auto;
-width: 100%;
-
-
+.nav{
+    text-align: right;
+    
 }
-.topnav ul li{
+.boxed{
+    font-size: 45px;
+    font-style: italic;
     text-align: center;
-    font-size: 20px;
-    position: relative;
-    padding: 12px 14px;
-    text-decoration: none;
-    display: inline;
-    overflow: auto;
+    margin: 2rem;
+    border: 2px solid azure;
+    width: 800px;
+    background-color: darkgray;
+
 }
