--- a/css/style.css
+++ b/css/style.css
@@ -8,23 +8,64 @@
 
 
 body{
-    padding: 2rem;
+    padding: 0;
+    margin: 0;
     text-align: left;
-    font-size: 30px;
+    font-size: 20px;
+    
     
 }
 
-.nav{
-    text-align: right;
+.topnav{ 
+    
+    height: 40px;
+}
+li{
+    display: inline-block;
+}
+a{
+    text-decoration: none;
+    color: rgb(181, 212, 212);
+    padding: 20px;
+
+
     
 }
 .boxed{
-    font-size: 45px;
+    padding: 1rem;
+    font-size: 20px;
     font-style: italic;
     text-align: center;
-    margin: 2rem;
+    margin: 1rem;
     border: 2px solid azure;
-    width: 800px;
+    width: 550px;
     background-color: darkgray;
+    position: absolute;
+    top: 20%;
+    left: 30%;
 
+}
+.black{
+    color: blue;
+}
+.heading{
+    text-align: center;
+}
+
+#content{
+    width: 300px;
+    height: 25px
+}
+.nav{
+    height: 40px;
+    width: 100px
+}
+
+table, th, td{
+    border: 1px solid black;
+    position: relative;
+    height: 90px;
+    width: 550px;
+    background-color: azure;
+    border-collapse: collapse
 }
