--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,12 @@
     border: 2px solid #bbbbbb;
     font-size: 24px;
 }
-
-
 body{
     padding: 0;
     margin: 0;
     text-align: left;
-    font-size: 20px;
-    
-    
+    font-size: 20px;   
 }
-
 .topnav{ 
     
     height: 40px;
@@ -26,10 +21,7 @@ li{
 a{
     text-decoration: none;
     color: rgb(181, 212, 212);
-    padding: 20px;
-
-
-    
+    padding: 20px;  
 }
 .boxed{
     padding: 1rem;
@@ -43,7 +35,6 @@ a{
     position: absolute;
     top: 20%;
     left: 30%;
-
 }
 .black{
     color: darkblue;
@@ -51,16 +42,66 @@ a{
 .heading{
     text-align: center;
 }
-
-#content{
+#name{
     width: 300px;
-    height: 25px
+    height:  25px
+}
+#productid{
+    width: 300px;
+    height:  25px
+}
+#quantity{
+    width: 300px;
+    height:  25px
+}
+#brand{
+    width: 300px;
+    height:  25px
+}
+#price{
+    width: 300px;
+    height:  25px
+}
+#password{
+    width: 300px;
+    height:  25px  
+}
+#username{
+    width: 300px;
+    height:  25px    
+}
+#firstname{
+    width: 300px;
+    height:  15px   
+}
+#lastname{
+    width: 300px;
+    height:  15px   
+}
+#email{
+    width: 300px;
+    height:  15px 
+}
+#cre_password{
+    width: 300px;
+    height:  15px 
+}
+#username1{
+    width: 300px;
+    height:  15px 
+}
+#number{
+    width: 300px;
+    height:  15px 
+}
+#passwordcon{
+    width: 300px;
+    height:  15px 
 }
 .nav{
     height: 40px;
     width: 100px
 }
-
 table, th, td{
     border: 1px solid black;
     position: relative;
